# wheely

./: .gitignore  CMakeLists.txt  README.md  dostuff.sh  wheel_config.json  wheely.py
src/: wheely_module.cpp  wheely_simulation.cpp  wheely_simulation.h  wheely_wasm.cpp
tests/: wheely_simulation_test.cpp
web/: .firebaserc  .gitignore  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: sync-wasm.js
web/src/: App.test.tsx  App.tsx  plotly.ts  theme.ts  vite-env.d.ts
web/src/components/: SimulationControls.test.tsx  SimulationControls.tsx  SimulationPlotPanel.test.tsx  SimulationPlotPanel.tsx
web/src/wasm/: index.ts
